--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <div class="research">
         <div class="NSMBW">
             <h2><u>New Super Mario Bros. Wii (2009)</u></h2>
-            <a href="https://horizon.miraheze.org/wiki/Main_Page">Horizon</a>
+            <h4><u>Misc</u></h4>
             <br />
             <a href="mods.html">Mods Available</a>
+            <hr />
+            <h4><u>Modding Tutorials</u></h4>
+            <a href="reggie-setup.html">Setting Up Reggie! Next (Page Does Not Exist)</a>
         </div>
     </div>
 </body>
