--- a/mods.html
+++ b/mods.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Mods</h1>
     <img src="favicon.png" class="icon"/>
-    <p>Here you can see all the mods submitted to here. If you want your project added, see <a href="submit.html">here</a></p>
+    <p>Here you can see all the mods submitted to here. If you want your project added, see <a href="submit.html">here (Page Does Not Exist)</a></p>
     
     <table>
         <tr>
