--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
             <h4><u>Misc</u></h4>
             <br />
             <a href="mods.html">Mods Available</a>
-            <hr />
+            <br />
             <h4><u>Modding Tutorials</u></h4>
             <a href="reggie-setup.html">Setting Up Reggie! Next (Page Does Not Exist)</a>
+        </div>
+        <hr />
+        <div class="NSMBDS">
+            <h2><u>New Super Mario Bros. (2006)</u></h2>
+            <h4><u>Misc</u></h4>
+            <br />
+            <a href="submit.html">Hey, this Section has no pages yet. Do you want to be the first to make one?</a>
         </div>
     </div>
 </body>
