--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>RiiImagined</h1>
-    <img src="favicon.png" class="icon"/>
+    <img src="favicon.png" class="icon" />
     <p>Welcome to RiiImagined, this website is mainly based off of Riivolution, but for Mario Games. This is the main page, look around and explore.</p>
 
     <div class="research">
@@ -31,5 +31,7 @@
             <a href="submit.html">Hey, this Section has no pages yet. Do you want to be the first to make one?</a>
         </div>
     </div>
+    <hr />
+    <p>© Birdies 2024 - 2025</p>
 </body>
 </html>
