--- a/mods.html
+++ b/mods.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <h1>Mods</h1>
-    <img src="favicon.png" class="icon"/>
+    <img src="favicon.png" class="icon" />
     <p>Here you can see all the mods submitted to here. If you want your project added, see <a href="submit.html">here (Page Does Not Exist)</a></p>
-    
+
     <table>
         <tr>
             <th>Mod Name</th>
@@ -21,7 +21,7 @@
             <th>Links</th>
             <th>Release Year</th>
         </tr>
-       <!--Mario's Missing Multiverses-->
+        <!--Mario's Missing Multiverses-->
         <tr>
             <td>Mario's Missing Multiverses</td>
             <td>Birdies</td>
@@ -31,5 +31,7 @@
         </tr>
     </table>
 
+    <hr />
+    <p>© Birdies 2024 - 2025</p>
 </body>
 </html>
