--- a/submit.html
+++ b/submit.html
@@ -16,6 +16,9 @@
     <p>Use this page to either download a template or submit a page</p>
 
     <a href="https://github.com/BirdiesYT/RiiImagined/upload/main">Submit Here</a>
-    <p>Any innapropriate content will be removed. Vandilism isn't tolerated either.</p>
+    <p>Any innapropriate content will be removed. Vandalism isn't tolerated either.</p>
+
+    <hr />
+    <p>© Birdies 2024 - 2025</p>
 </body>
 </html>
