--- a/submit.html
+++ b/submit.html
@@ -19,6 +19,6 @@
     <p>Any innapropriate content will be removed. Vandalism isn't tolerated either.</p>
 
     <hr />
-    <p>© Birdies 2024 - 2025</p>
+    <p>&#169 Birdies 2024 - 2025</p>
 </body>
 </html>
