--- a/submit.html
+++ b/submit.html
@@ -15,6 +15,9 @@
     <progress></progress>
     <p>Use this page to either download a template or submit a page</p>
 
+    <h3>Instructions</h3>
+    <p>When you add your files, in the <kbd>Add an optional extended description</kbd> box, please insert the name of the category you want your page to be in and the name of your page. Optionally, you can add your name (or username) too!</p>
+
     <a href="https://github.com/BirdiesYT/RiiImagined/upload/main">Submit Here</a>
     <p>Any innapropriate content will be removed. Vandalism isn't tolerated either.</p>
 
